[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "masht"
dynamic = ["version"]
description = 'Markdown AS HTml: Creates a HTML version of a Markdown file.'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = [ "markdown", "html", "converter"]
authors = [ { name = "Bill Melvin", email = "bill@sbillmelvin.com" } ]
dependencies = [ "chardet", "mistune" ]

[project.urls]
Documentation = "https://github.com/wmelvin/masht#readme"
Issues = "https://github.com/wmelvin/masht/issues"
Source = "https://github.com/wmelvin/masht"

[project.scripts]
masht = "masht:md_to_html.main"

[tool.setuptools.dynamic]
version = {attr = "masht.__about__.__version__"}

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.8",
    "tox>=4.32.0",
    "tox-uv>=1.29.0",
]

[tool.tox]
legacy_tox_ini = """
[tox]
requires = tox-uv
envlist = py310, py311, py312, py313, py314

[testenv]
runner = uv-venv-runner
description = Run tests with pytest
commands = pytest
"""

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "E",    # pycodestyle errors
    "F",    # Pyfakes
    "FA",   # flake8-future-annotations
    "I",    # isort
    "ISC",  # flake8-implicit-str-concat
    "PERF", # Perflint
    "PL",   # Pylint
    "PTH",  # flake8-use-pathlib
    "PYI",  # flake8-pyi
    "RET",  # flake8-return
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
    "W"     # Warning
]
# extend-select = ["ALL"]
ignore = [
    "ISC001" # single-line-implicit-string-concatenation
]

[tool.ruff.lint.per-file-ignores]
"**/test_*.py" = [
    "S101",     # assert
    "PLR2004",  # magic value
]
